Fix save/update users in Sica2, update header and footer

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ target/
 /sica-common/nbproject/private/
 /sica-core/nbproject/private/
 /SicaSpasa/nbproject/private/
+/SiCAWeb/nbproject/private/
+/sicaweb-core/nbproject/private/
