--- a/SicaSpasa/nbproject/project.properties
+++ b/SicaSpasa/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.json-20160810.jar=/home/degmi/NetBeansProjects/Librerias/json-20160810.jar
+file.reference.json-20160810.jar-1=..\\lib\\json-20160810.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.json-20160810.jar}
+    ${file.reference.json-20160810.jar}:\
+    ${file.reference.json-20160810.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
