--- a/SicaSpasa/nbproject/project.properties
+++ b/SicaSpasa/nbproject/project.properties
@@ -36,7 +36,7 @@ excludes=
 file.reference.json-20160810.jar=/home/degmi/NetBeansProjects/Librerias/json-20160810.jar
 file.reference.json-20160810.jar-1=..\\lib\\json-20160810.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.json-20160810.jar}:\
